--- a/docs/style.css
+++ b/docs/style.css
@@ -32,6 +32,7 @@ body {
     margin: 0 auto 30px;
     /*background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);*/
     border-radius: 50%;
+    overflow: hidden;
     display: flex;
     align-items: center;
     justify-content: center;
